// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateParserModel array.ts getBooleanArray1: getBooleanArray1 1`] = `
Object {
  "deps": Object {},
  "root": Object {
    "element": Object {
      "parser": Object {
        "type": "boolean",
      },
      "type": "arrayElement",
    },
    "type": "array",
  },
}
`;

exports[`generateParserModel array.ts getBooleanArray2: getBooleanArray2 1`] = `
Object {
  "deps": Object {},
  "root": Object {
    "element": Object {
      "parser": Object {
        "type": "boolean",
      },
      "type": "arrayElement",
    },
    "type": "array",
  },
}
`;

exports[`generateParserModel array.ts getBooleanDoubleArray1: getBooleanDoubleArray1 1`] = `
Object {
  "deps": Object {},
  "root": Object {
    "element": Object {
      "parser": Object {
        "element": Object {
          "parser": Object {
            "type": "boolean",
          },
          "type": "arrayElement",
        },
        "type": "array",
      },
      "type": "arrayElement",
    },
    "type": "array",
  },
}
`;

exports[`generateParserModel array.ts getBooleanDoubleArray2: getBooleanDoubleArray2 1`] = `
Object {
  "deps": Object {},
  "root": Object {
    "element": Object {
      "parser": Object {
        "element": Object {
          "parser": Object {
            "type": "boolean",
          },
          "type": "arrayElement",
        },
        "type": "array",
      },
      "type": "arrayElement",
    },
    "type": "array",
  },
}
`;

exports[`generateParserModel array.ts getNumberArray1: getNumberArray1 1`] = `
Object {
  "deps": Object {},
  "root": Object {
    "element": Object {
      "parser": Object {
        "type": "number",
      },
      "type": "arrayElement",
    },
    "type": "array",
  },
}
`;

exports[`generateParserModel array.ts getNumberArray2: getNumberArray2 1`] = `
Object {
  "deps": Object {},
  "root": Object {
    "element": Object {
      "parser": Object {
        "type": "number",
      },
      "type": "arrayElement",
    },
    "type": "array",
  },
}
`;

exports[`generateParserModel array.ts getNumberDoubleArray1: getNumberDoubleArray1 1`] = `
Object {
  "deps": Object {},
  "root": Object {
    "element": Object {
      "parser": Object {
        "element": Object {
          "parser": Object {
            "type": "number",
          },
          "type": "arrayElement",
        },
        "type": "array",
      },
      "type": "arrayElement",
    },
    "type": "array",
  },
}
`;

exports[`generateParserModel array.ts getNumberDoubleArray2: getNumberDoubleArray2 1`] = `
Object {
  "deps": Object {},
  "root": Object {
    "element": Object {
      "parser": Object {
        "element": Object {
          "parser": Object {
            "type": "number",
          },
          "type": "arrayElement",
        },
        "type": "array",
      },
      "type": "arrayElement",
    },
    "type": "array",
  },
}
`;

exports[`generateParserModel array.ts getStringArray1: getStringArray1 1`] = `
Object {
  "deps": Object {},
  "root": Object {
    "element": Object {
      "parser": Object {
        "type": "string",
      },
      "type": "arrayElement",
    },
    "type": "array",
  },
}
`;

exports[`generateParserModel array.ts getStringArray2: getStringArray2 1`] = `
Object {
  "deps": Object {},
  "root": Object {
    "element": Object {
      "parser": Object {
        "type": "string",
      },
      "type": "arrayElement",
    },
    "type": "array",
  },
}
`;

exports[`generateParserModel array.ts getStringDoubleArray1: getStringDoubleArray1 1`] = `
Object {
  "deps": Object {},
  "root": Object {
    "element": Object {
      "parser": Object {
        "element": Object {
          "parser": Object {
            "type": "string",
          },
          "type": "arrayElement",
        },
        "type": "array",
      },
      "type": "arrayElement",
    },
    "type": "array",
  },
}
`;

exports[`generateParserModel array.ts getStringDoubleArray2: getStringDoubleArray2 1`] = `
Object {
  "deps": Object {},
  "root": Object {
    "element": Object {
      "parser": Object {
        "element": Object {
          "parser": Object {
            "type": "string",
          },
          "type": "arrayElement",
        },
        "type": "array",
      },
      "type": "arrayElement",
    },
    "type": "array",
  },
}
`;

exports[`generateParserModel interface.ts getInterface1: getInterface1 1`] = `
Object {
  "deps": Object {
    "Message1": Object {
      "members": Array [
        Object {
          "name": "s",
          "optional": false,
          "parser": Object {
            "type": "string",
          },
          "type": "member",
        },
        Object {
          "name": "n",
          "optional": false,
          "parser": Object {
            "type": "number",
          },
          "type": "member",
        },
        Object {
          "name": "b",
          "optional": false,
          "parser": Object {
            "type": "boolean",
          },
          "type": "member",
        },
        Object {
          "name": "os",
          "optional": true,
          "parser": Object {
            "type": "string",
          },
          "type": "member",
        },
        Object {
          "name": "on",
          "optional": true,
          "parser": Object {
            "type": "number",
          },
          "type": "member",
        },
        Object {
          "name": "ob",
          "optional": true,
          "parser": Object {
            "type": "boolean",
          },
          "type": "member",
        },
        Object {
          "name": "nested",
          "optional": false,
          "parser": Object {
            "type": "reference",
            "typeName": "NestedMessage",
          },
          "type": "member",
        },
        Object {
          "name": "oNested",
          "optional": true,
          "parser": Object {
            "type": "reference",
            "typeName": "NestedMessage",
          },
          "type": "member",
        },
      ],
      "type": "object",
    },
    "NestedMessage": Object {
      "members": Array [
        Object {
          "name": "x",
          "optional": false,
          "parser": Object {
            "type": "string",
          },
          "type": "member",
        },
        Object {
          "name": "y",
          "optional": false,
          "parser": Object {
            "type": "string",
          },
          "type": "member",
        },
        Object {
          "name": "z",
          "optional": false,
          "parser": Object {
            "type": "boolean",
          },
          "type": "member",
        },
        Object {
          "name": "ox",
          "optional": true,
          "parser": Object {
            "type": "string",
          },
          "type": "member",
        },
        Object {
          "name": "oy",
          "optional": true,
          "parser": Object {
            "type": "string",
          },
          "type": "member",
        },
        Object {
          "name": "oz",
          "optional": true,
          "parser": Object {
            "type": "boolean",
          },
          "type": "member",
        },
      ],
      "type": "object",
    },
  },
  "root": Object {
    "type": "reference",
    "typeName": "Message1",
  },
}
`;

exports[`generateParserModel interface.ts getInterface2: getInterface2 1`] = `
Object {
  "deps": Object {
    "Message1": Object {
      "members": Array [
        Object {
          "name": "s",
          "optional": false,
          "parser": Object {
            "type": "string",
          },
          "type": "member",
        },
        Object {
          "name": "n",
          "optional": false,
          "parser": Object {
            "type": "number",
          },
          "type": "member",
        },
        Object {
          "name": "b",
          "optional": false,
          "parser": Object {
            "type": "boolean",
          },
          "type": "member",
        },
        Object {
          "name": "os",
          "optional": true,
          "parser": Object {
            "type": "string",
          },
          "type": "member",
        },
        Object {
          "name": "on",
          "optional": true,
          "parser": Object {
            "type": "number",
          },
          "type": "member",
        },
        Object {
          "name": "ob",
          "optional": true,
          "parser": Object {
            "type": "boolean",
          },
          "type": "member",
        },
        Object {
          "name": "nested",
          "optional": false,
          "parser": Object {
            "type": "reference",
            "typeName": "NestedMessage",
          },
          "type": "member",
        },
        Object {
          "name": "oNested",
          "optional": true,
          "parser": Object {
            "type": "reference",
            "typeName": "NestedMessage",
          },
          "type": "member",
        },
      ],
      "type": "object",
    },
    "NestedMessage": Object {
      "members": Array [
        Object {
          "name": "x",
          "optional": false,
          "parser": Object {
            "type": "string",
          },
          "type": "member",
        },
        Object {
          "name": "y",
          "optional": false,
          "parser": Object {
            "type": "string",
          },
          "type": "member",
        },
        Object {
          "name": "z",
          "optional": false,
          "parser": Object {
            "type": "boolean",
          },
          "type": "member",
        },
        Object {
          "name": "ox",
          "optional": true,
          "parser": Object {
            "type": "string",
          },
          "type": "member",
        },
        Object {
          "name": "oy",
          "optional": true,
          "parser": Object {
            "type": "string",
          },
          "type": "member",
        },
        Object {
          "name": "oz",
          "optional": true,
          "parser": Object {
            "type": "boolean",
          },
          "type": "member",
        },
      ],
      "type": "object",
    },
  },
  "root": Object {
    "element": Object {
      "parser": Object {
        "type": "reference",
        "typeName": "Message1",
      },
      "type": "arrayElement",
    },
    "type": "array",
  },
}
`;

exports[`generateParserModel interface.ts getInterface3: getInterface3 1`] = `
Object {
  "deps": Object {
    "Message3": Object {
      "members": Array [
        Object {
          "name": "strArr",
          "optional": false,
          "parser": Object {
            "element": Object {
              "parser": Object {
                "type": "string",
              },
              "type": "arrayElement",
            },
            "type": "array",
          },
          "type": "member",
        },
        Object {
          "name": "msgArr",
          "optional": false,
          "parser": Object {
            "element": Object {
              "parser": Object {
                "type": "reference",
                "typeName": "Message4",
              },
              "type": "arrayElement",
            },
            "type": "array",
          },
          "type": "member",
        },
      ],
      "type": "object",
    },
    "Message4": Object {
      "members": Array [
        Object {
          "name": "x",
          "optional": false,
          "parser": Object {
            "type": "boolean",
          },
          "type": "member",
        },
      ],
      "type": "object",
    },
  },
  "root": Object {
    "element": Object {
      "parser": Object {
        "type": "reference",
        "typeName": "Message3",
      },
      "type": "arrayElement",
    },
    "type": "array",
  },
}
`;

exports[`generateParserModel interface.ts getInterface4: getInterface4 1`] = `
Object {
  "deps": Object {
    "Message5": Object {
      "members": Array [
        Object {
          "name": "y",
          "optional": false,
          "parser": Object {
            "type": "number",
          },
          "type": "member",
        },
        Object {
          "name": "x",
          "optional": false,
          "parser": Object {
            "type": "boolean",
          },
          "type": "member",
        },
      ],
      "type": "object",
    },
  },
  "root": Object {
    "type": "reference",
    "typeName": "Message5",
  },
}
`;

exports[`generateParserModel interface.ts getInterface5: getInterface5 1`] = `
Object {
  "deps": Object {
    "Message6": Object {
      "members": Array [
        Object {
          "name": "x",
          "optional": false,
          "parser": Object {
            "type": "number",
          },
          "type": "member",
        },
        Object {
          "name": "y",
          "optional": false,
          "parser": Object {
            "type": "number",
          },
          "type": "member",
        },
      ],
      "type": "object",
    },
  },
  "root": Object {
    "type": "reference",
    "typeName": "Message6",
  },
}
`;

exports[`generateParserModel literal.ts getBooleanLiteral1: getBooleanLiteral1 1`] = `
Object {
  "deps": Object {},
  "root": Object {
    "literal": true,
    "type": "boolean-literal",
  },
}
`;

exports[`generateParserModel literal.ts getBooleanLiteral2: getBooleanLiteral2 1`] = `
Object {
  "deps": Object {},
  "root": Object {
    "element": Object {
      "parser": Object {
        "literal": true,
        "type": "boolean-literal",
      },
      "type": "arrayElement",
    },
    "type": "array",
  },
}
`;

exports[`generateParserModel literal.ts getNumberLiteral1: getNumberLiteral1 1`] = `
Object {
  "deps": Object {},
  "root": Object {
    "literal": 123,
    "type": "number-literal",
  },
}
`;

exports[`generateParserModel literal.ts getNumberLiteral2: getNumberLiteral2 1`] = `
Object {
  "deps": Object {},
  "root": Object {
    "element": Object {
      "parser": Object {
        "literal": 123,
        "type": "number-literal",
      },
      "type": "arrayElement",
    },
    "type": "array",
  },
}
`;

exports[`generateParserModel literal.ts getStringLiteral1: getStringLiteral1 1`] = `
Object {
  "deps": Object {},
  "root": Object {
    "literal": "aap",
    "type": "string-literal",
  },
}
`;

exports[`generateParserModel literal.ts getStringLiteral2: getStringLiteral2 1`] = `
Object {
  "deps": Object {},
  "root": Object {
    "element": Object {
      "parser": Object {
        "literal": "aap",
        "type": "string-literal",
      },
      "type": "arrayElement",
    },
    "type": "array",
  },
}
`;

exports[`generateParserModel native.ts getBoolean: getBoolean 1`] = `
Object {
  "deps": Object {},
  "root": Object {
    "type": "boolean",
  },
}
`;

exports[`generateParserModel native.ts getNumber: getNumber 1`] = `
Object {
  "deps": Object {},
  "root": Object {
    "type": "number",
  },
}
`;

exports[`generateParserModel native.ts getString: getString 1`] = `
Object {
  "deps": Object {},
  "root": Object {
    "type": "string",
  },
}
`;

exports[`generateParserModel typeAlias.ts getTypeAlias1: getTypeAlias1 1`] = `
Object {
  "deps": Object {
    "Message1": Object {
      "members": Array [
        Object {
          "name": "s",
          "optional": false,
          "parser": Object {
            "type": "string",
          },
          "type": "member",
        },
        Object {
          "name": "n",
          "optional": false,
          "parser": Object {
            "type": "number",
          },
          "type": "member",
        },
        Object {
          "name": "b",
          "optional": false,
          "parser": Object {
            "type": "boolean",
          },
          "type": "member",
        },
        Object {
          "name": "os",
          "optional": true,
          "parser": Object {
            "type": "string",
          },
          "type": "member",
        },
        Object {
          "name": "on",
          "optional": true,
          "parser": Object {
            "type": "number",
          },
          "type": "member",
        },
        Object {
          "name": "ob",
          "optional": true,
          "parser": Object {
            "type": "boolean",
          },
          "type": "member",
        },
        Object {
          "name": "nested",
          "optional": false,
          "parser": Object {
            "type": "reference",
            "typeName": "NestedMessage1",
          },
          "type": "member",
        },
        Object {
          "name": "oNested",
          "optional": true,
          "parser": Object {
            "type": "reference",
            "typeName": "NestedMessage1",
          },
          "type": "member",
        },
      ],
      "type": "object",
    },
    "NestedMessage1": Object {
      "members": Array [
        Object {
          "name": "s",
          "optional": false,
          "parser": Object {
            "type": "string",
          },
          "type": "member",
        },
        Object {
          "name": "n",
          "optional": false,
          "parser": Object {
            "type": "number",
          },
          "type": "member",
        },
        Object {
          "name": "b",
          "optional": false,
          "parser": Object {
            "type": "boolean",
          },
          "type": "member",
        },
        Object {
          "name": "os",
          "optional": true,
          "parser": Object {
            "type": "string",
          },
          "type": "member",
        },
        Object {
          "name": "on",
          "optional": true,
          "parser": Object {
            "type": "number",
          },
          "type": "member",
        },
        Object {
          "name": "ob",
          "optional": true,
          "parser": Object {
            "type": "boolean",
          },
          "type": "member",
        },
      ],
      "type": "object",
    },
  },
  "root": Object {
    "type": "reference",
    "typeName": "Message1",
  },
}
`;

exports[`generateParserModel typeAlias.ts getTypeAlias2: getTypeAlias2 1`] = `
Object {
  "deps": Object {},
  "root": Object {
    "type": "string",
  },
}
`;

exports[`generateParserModel typeAlias.ts getTypeAlias3: _getTypeAlias3 1`] = `
Object {
  "deps": Object {
    "Message3": Object {
      "element": Object {
        "parser": Object {
          "type": "number",
        },
        "type": "arrayElement",
      },
      "type": "array",
    },
  },
  "root": Object {
    "type": "reference",
    "typeName": "Message3",
  },
}
`;

exports[`generateParserModel typeAlias.ts getTypeAlias3: getTypeAlias3 1`] = `
Object {
  "deps": Object {
    "Message3": Object {
      "element": Object {
        "parser": Object {
          "type": "number",
        },
        "type": "arrayElement",
      },
      "type": "array",
    },
  },
  "root": Object {
    "type": "reference",
    "typeName": "Message3",
  },
}
`;

exports[`generateParserModel typeAlias.ts getTypeAlias4: getTypeAlias4 1`] = `
Object {
  "deps": Object {
    "Message3": Object {
      "element": Object {
        "parser": Object {
          "type": "number",
        },
        "type": "arrayElement",
      },
      "type": "array",
    },
  },
  "root": Object {
    "type": "reference",
    "typeName": "Message3",
  },
}
`;

exports[`generateParserModel typeAlias.ts getTypeAlias5: getTypeAlias5 1`] = `
Object {
  "deps": Object {
    "Message3": Object {
      "element": Object {
        "parser": Object {
          "type": "number",
        },
        "type": "arrayElement",
      },
      "type": "array",
    },
  },
  "root": Object {
    "element": Object {
      "parser": Object {
        "type": "reference",
        "typeName": "Message3",
      },
      "type": "arrayElement",
    },
    "type": "array",
  },
}
`;

exports[`generateParserModel typeAlias.ts getTypeAlias6: getTypeAlias6 1`] = `
Object {
  "deps": Object {
    "Message3": Object {
      "element": Object {
        "parser": Object {
          "type": "number",
        },
        "type": "arrayElement",
      },
      "type": "array",
    },
    "Message5": Object {
      "members": Array [
        Object {
          "name": "x",
          "optional": false,
          "parser": Object {
            "element": Object {
              "parser": Object {
                "type": "reference",
                "typeName": "Message3",
              },
              "type": "arrayElement",
            },
            "type": "array",
          },
          "type": "member",
        },
        Object {
          "name": "y",
          "optional": false,
          "parser": Object {
            "element": Object {
              "parser": Object {
                "type": "string",
              },
              "type": "arrayElement",
            },
            "type": "array",
          },
          "type": "member",
        },
      ],
      "type": "object",
    },
  },
  "root": Object {
    "element": Object {
      "parser": Object {
        "type": "reference",
        "typeName": "Message5",
      },
      "type": "arrayElement",
    },
    "type": "array",
  },
}
`;

exports[`generateParserModel union.ts getUnion1: getUnion1 1`] = `
Object {
  "deps": Object {},
  "root": Object {
    "oneOf": Array [
      Object {
        "type": "string",
      },
      Object {
        "type": "number",
      },
      Object {
        "literal": false,
        "type": "boolean-literal",
      },
      Object {
        "literal": true,
        "type": "boolean-literal",
      },
    ],
    "type": "union",
  },
}
`;

exports[`generateParserModel union.ts getUnion2: getUnion2 1`] = `
Object {
  "deps": Object {},
  "root": Object {
    "oneOf": Array [
      Object {
        "type": "string",
      },
      Object {
        "type": "number",
      },
      Object {
        "literal": false,
        "type": "boolean-literal",
      },
      Object {
        "literal": true,
        "type": "boolean-literal",
      },
    ],
    "type": "union",
  },
}
`;

exports[`generateParserModel union.ts getUnion3: getUnion3 1`] = `
Object {
  "deps": Object {},
  "root": Object {
    "oneOf": Array [
      Object {
        "literal": false,
        "type": "boolean-literal",
      },
      Object {
        "literal": "string",
        "type": "string-literal",
      },
      Object {
        "literal": 123,
        "type": "number-literal",
      },
    ],
    "type": "union",
  },
}
`;

exports[`generateParserModel union.ts getUnion4: getUnion4 1`] = `
Object {
  "deps": Object {},
  "root": Object {
    "oneOf": Array [
      Object {
        "element": Object {
          "parser": Object {
            "type": "string",
          },
          "type": "arrayElement",
        },
        "type": "array",
      },
      Object {
        "element": Object {
          "parser": Object {
            "type": "number",
          },
          "type": "arrayElement",
        },
        "type": "array",
      },
      Object {
        "element": Object {
          "parser": Object {
            "type": "boolean",
          },
          "type": "arrayElement",
        },
        "type": "array",
      },
    ],
    "type": "union",
  },
}
`;

exports[`generateParserModel union.ts getUnion5: getUnion5 1`] = `
Object {
  "deps": Object {
    "X1": Object {
      "members": Array [
        Object {
          "name": "a",
          "optional": false,
          "parser": Object {
            "type": "string",
          },
          "type": "member",
        },
        Object {
          "name": "b",
          "optional": false,
          "parser": Object {
            "type": "number",
          },
          "type": "member",
        },
        Object {
          "name": "c",
          "optional": false,
          "parser": Object {
            "type": "boolean",
          },
          "type": "member",
        },
      ],
      "type": "object",
    },
  },
  "root": Object {
    "oneOf": Array [
      Object {
        "type": "reference",
        "typeName": "X1",
      },
      Object {
        "element": Object {
          "parser": Object {
            "type": "reference",
            "typeName": "X1",
          },
          "type": "arrayElement",
        },
        "type": "array",
      },
    ],
    "type": "union",
  },
}
`;

exports[`generateParserModel union.ts getUnion6: getUnion6 1`] = `
Object {
  "deps": Object {
    "X2": Object {
      "oneOf": Array [
        Object {
          "literal": false,
          "type": "boolean-literal",
        },
        Object {
          "literal": 123,
          "type": "number-literal",
        },
        Object {
          "literal": "str",
          "type": "string-literal",
        },
      ],
      "type": "union",
    },
  },
  "root": Object {
    "type": "reference",
    "typeName": "X2",
  },
}
`;

exports[`generateParserModel union.ts getUnion7: getUnion7 1`] = `
Object {
  "deps": Object {
    "X3": Object {
      "oneOf": Array [
        Object {
          "members": Array [
            Object {
              "name": "a",
              "optional": false,
              "parser": Object {
                "type": "string",
              },
              "type": "member",
            },
          ],
          "type": "object",
        },
        Object {
          "members": Array [
            Object {
              "name": "b",
              "optional": false,
              "parser": Object {
                "type": "number",
              },
              "type": "member",
            },
          ],
          "type": "object",
        },
        Object {
          "members": Array [
            Object {
              "name": "c",
              "optional": false,
              "parser": Object {
                "type": "boolean",
              },
              "type": "member",
            },
          ],
          "type": "object",
        },
      ],
      "type": "union",
    },
  },
  "root": Object {
    "type": "reference",
    "typeName": "X3",
  },
}
`;

exports[`generateParserModel union.ts getUnion8: getUnion8 1`] = `
Object {
  "deps": Object {
    "X3": Object {
      "oneOf": Array [
        Object {
          "members": Array [
            Object {
              "name": "a",
              "optional": false,
              "parser": Object {
                "type": "string",
              },
              "type": "member",
            },
          ],
          "type": "object",
        },
        Object {
          "members": Array [
            Object {
              "name": "b",
              "optional": false,
              "parser": Object {
                "type": "number",
              },
              "type": "member",
            },
          ],
          "type": "object",
        },
        Object {
          "members": Array [
            Object {
              "name": "c",
              "optional": false,
              "parser": Object {
                "type": "boolean",
              },
              "type": "member",
            },
          ],
          "type": "object",
        },
      ],
      "type": "union",
    },
  },
  "root": Object {
    "oneOf": Array [
      Object {
        "members": Array [
          Object {
            "name": "a",
            "optional": false,
            "parser": Object {
              "type": "string",
            },
            "type": "member",
          },
        ],
        "type": "object",
      },
      Object {
        "members": Array [
          Object {
            "name": "b",
            "optional": false,
            "parser": Object {
              "type": "number",
            },
            "type": "member",
          },
        ],
        "type": "object",
      },
      Object {
        "members": Array [
          Object {
            "name": "c",
            "optional": false,
            "parser": Object {
              "type": "boolean",
            },
            "type": "member",
          },
        ],
        "type": "object",
      },
      Object {
        "element": Object {
          "parser": Object {
            "type": "reference",
            "typeName": "X3",
          },
          "type": "arrayElement",
        },
        "type": "array",
      },
    ],
    "type": "union",
  },
}
`;
